tests/dbg_cases/imports/errors/dbg_import_error_circular/circular_a.csm
// File A - imports from B
#import func_b from "./circular_b.csm"

i32 func_a() {
    return 1;
}
